# Jeong-Office-Ishmael-Simulator

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md
scripts/: checks.sh
src/jeongsimulator/: __init__.py  cli.py  simulation.py
tests/unit/: test_main.py  test_simulation.py
